// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly 1`] = `
.c0 {
  border: 1px solid transparent;
  padding: 1vh 1.8vh;
  font-size: 2.5vh;
  border-radius: 0.6vh;
  cursor: pointer;
  color: #fff;
  background-color: #007bff;
  border-color: #007bff;
  -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.c0:hover {
  background-color: #0069d9;
  border-color: #0062cc;
}

<button
  className="c0"
/>
`;

exports[`disabled Renders correctly 1`] = `
.c0 {
  border: 1px solid transparent;
  padding: 1vh 1.8vh;
  font-size: 2.5vh;
  border-radius: 0.6vh;
  cursor: not-allowed;
  color: #fff;
  background-color: #007bff;
  border-color: #007bff;
  opacity: 0.65;
}

<button
  className="c0"
  disabled={true}
/>
`;
